--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Foto di Londra">
             <hr>
         </header>
+        <!-- Inizio Main -->
         <main>
+            <!-- Inizio sezione Spese -->
             <section>
                 <h2> Le mie spese</h2>
                 <table>
@@ -52,6 +54,10 @@
                     </tfoot>
                 </table>
                 <hr>
+            </section>
+            <!-- Inizio Sezione cose da fare -->
+            <section>
+
             </section>
         </main>
         <footer>
