--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
             </section>
             <!-- Inizio Sezione cose da fare -->
             <section>
-
+                <h3>Cose da fare</h3>
+                <ul>
+                    <li>Visitare la Tower di London &cross;</li>
+                    <li>Visitare Greenwich &check;</li>
+                    <li>Ascoltare un artista di strada a Convert Garden &check;</li>
+                    <li>Mangiare il tipico Fish and Chips Inglese &cross;</li>
+                </ul>
             </section>
         </main>
         <footer>
