--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
                     <li>Ascoltare un artista di strada a Convert Garden &check;</li>
                     <li>Mangiare il tipico Fish and Chips Inglese &cross;</li>
                 </ul>
+                <hr>
+            </section>
+            <!-- Inizio Sezione Info utili -->
+            <section>
+                <h3>Info Utili:</h3>
+                <ol>
+                    <li>Numeri utili di emergenza
+                        <ul>
+                            <li><strong>999</strong> - Emergenza</li>
+                            <li><strong>101</strong> - Numero polizia</li>
+                            <li><strong>111</strong> - numero assistenza medica</li>
+                        </ul>
+                    </li>
+                    <li>Hotel
+                        <ul>
+                            <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                            <li><strong>Indirizzo Hotel:</strong> Westminister, London SW1A 1AA, Regno Unito</li>
+                        </ul>
+                    </li>
+                    <li>Aereo
+                        <ul>
+                            <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
+                            <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18.30 da London Heathrow</li>
+                        </ul>
+                    </li>
+                </ol>
+                <hr>
             </section>
         </main>
         <footer>
