--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     </tbody>
                     <tfoot>
                         <tr>
+                            <!-- <td colspan="2"> Una colonna che ne occupa 2, come un <td> vuoto -->
                             <td>Totale</td>
                             <td></td>
                             <td>360€</td>
